Prevents overlap of footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,9 @@ html {
 }
 
 body {
-    height: 100%;
+    position: relative;
+    padding-bottom: 3px;
+    min-height: 100%;
     font-family: "Open Sans", sans-serif;
     background: whitesmoke;
 }
@@ -101,7 +103,9 @@ span {
 }
 
 footer {
-   text-align: center;
+   position: absolute;
+   bottom: 10px;
+   right: 50%;
 }
 
 .instruction-body {
